fix logo cut off on small screen heights
resolves issue https://github.com/ellite/Wallos/issues/179

--- a/styles/login.css
+++ b/styles/login.css
@@ -35,6 +35,12 @@ body, html {
     }
 }
 
+@media (max-height: 768px) {
+    .content {
+        height: auto;
+    }
+}
+
 .container > header {
     text-align: center;
 }
